# iFCH-devices

./: .gitignore  .gitmodules  .pre-commit-config.yaml  NOTICE.txt  README.md  THIRD_PARTY_NOTICES.md
.github/license-check/: config.json  header_CI_c.txt  header_CI_py.txt  header_CI_py_gpl.txt  header_pre-commit.txt  header_pre-commit_gpl.txt
.github/workflows/: license-check.yml  ruff.yml
apps/: .gitignore  Makefile  README.md
apps/ecg_viewer/: README.md  launch.command  main.py  pyproject.toml  r_peaks.py
apps/ecg_viewer/src/: r_peaks.py
apps/esp_logger/: README.md  main.py  pyproject.toml
apps/esp_logger/reader/: record_reader.py
apps/movesense_logger/: .gitignore  README.md  main.py  pyproject.toml
apps/movesense_logger/src/: __init__.py  backend.py  ui_components.py  views.py
apps/multi_movesense/: README.md  main.py  pyproject.toml
apps/multi_movesense/src/: __init__.py  backend.py  ui_components.py  views.py
devices/: README.md
devices/esp_logger/: .gitignore  Makefile  README.md  SERIAL_PROTOCOL.md  env.sh  sdkconfig.defaults
devices/esp_logger/case/: iFCH-logger-body.3mf  iFCH-logger-body_v1.3mf  iFCH-logger-lid.3mf  iFCH-logger.FCStd
devices/esp_logger/main/: CMakeLists.txt  ble_com.cpp  ble_com.h  globals.h  idf_component.yml  logger.cpp  logger.h  main.cpp  memory.cpp  memory.h  power.cpp  power.h  rtc_time.cpp  rtc_time.h  serial_com.cpp  serial_com.h  utils.cpp  utils.h
devices/movesense_gatt/: GATT_PROTOCOL.md  Makefile  README.md  start_docker.sh
devices/movesense_gatt/scripts/: ifch_gatt_example.py  test_ifch_gatt.py
devices/movesense_gatt/src/: App.cpp  CMakeLists.txt  IfchGattClient.cpp  IfchGattClient.h  app_root.yaml
devices/movesense_gatt/src/wbresources/: datastorage.yaml  resources.cpp
drivers/: README.md  pyproject.toml
drivers/examples/: example_esp_logger.py  example_logger.py  example_movesense_gatt.py
drivers/ifch_drivers/: __init__.py  esp_logger.py  movesense_gatt.py  utils.py
drivers/ifch_drivers/common/: movesense_stream_decoder.py  sbem_decoder.py  utils.py
drivers/ifch_drivers/formats/: __init__.py  esp_record.py  movesense_record.py  movesense_sbem.py  movesense_stream.py
drivers/scripts/: update_descriptors.py
drivers/tests/: _test_esp_logger.py  test_esp_logger.py  test_movesense_gatt.py  test_movesense_gatt_codes.py
firmware/: Makefile
firmware/iFCH_gatt/: App.cpp  CMakeLists.txt  IfchGattClient.cpp  IfchGattClient.h
firmware/iFCH_gatt_old/: IfchGattClient.cpp  IfchGattClient.h
firmware/iFCH_logger/: README.md  iFCH_logger.ino
firmware/iFCH_logger/LED/: LED.ino
firmware/iFCH_logger/SD/: SD.ino
firmware/iFCH_logger/gatt_serial/: gatt_serial.ino
firmware/iFCH_logger/gauge/: gauge.ino
firmware/iFCH_logger/src/: globals.h  memory.cpp  memory.h  power.cpp  power.h  protocol.cpp  protocol.h  rtc_time.cpp  rtc_time.h  utils.cpp  utils.h
firmware/iFCH_logger/time_get/: time_get.ino
firmware/iFCH_logger/time_set/: time.ino
iFCH_gatt/: Makefile
iFCH_gatt/scripts/: decode_sbem.py  ifch_gatt_example.py  requirements.txt  test_ifch_gatt.py
iFCH_gatt/src/: App.cpp  IfchGattClient.cpp  IfchGattClient.h
iFCH_logger/: README.md  iFCH_logger.ino
iFCH_logger/case/: iFCH-logger-body.3mf  iFCH-logger-lid.3mf
iFCH_logger/firmware/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
iFCH_logger/firmware/components/ArduinoStreamUtils/: CMakeLists.txt
iFCH_logger/firmware/components/FastCRC/: CMakeLists.txt
iFCH_logger/firmware/components/SparkFun_MAX1704x/: CMakeLists.txt
iFCH_logger/firmware/components/SparkFun_MAX1704x/src/: SparkFun_MAX1704x_Fuel_Gauge_Arduino_Library.h
iFCH_logger/firmware/components/SparkFun_RV8803/: CMakeLists.txt
iFCH_logger/firmware/main/: CMakeLists.txt  ble_com.cpp  ble_com.h  esp_ble.cpp  esp_ble.h  globals.h  idf_component.yml  logger.cpp  logger.h  main.c  main.cpp  main.h  memory.cpp  memory.h  power.cpp  power.h  rtc_time.cpp  rtc_time.h  serial_com.cpp  serial_com.h  utils.cpp  utils.h
iFCH_logger/gui/: .gitignore  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt  test_cli.py
iFCH_logger/gui/core/: device_service.py  movesense_decoder.py  serial_async.py
iFCH_logger/scripts/: device_service.py  serial_async.py  test_logger.py  test_serial.py
iFCH_logger/src/: ble_com.cpp  ble_com.h  globals.h  memory.cpp  memory.h  power.cpp  power.h  rtc_time.cpp  serial_com.cpp  serial_com.h  utils.cpp  utils.h
software/: decode_sbem.py  fetch_logbook_data.py  live_fetch.py  logbook_fetch.py  movesense_sensor_data.py  test_ifch_gatt.py  test_live_fetch.py
