[project]
name = "ifch-drivers"
version = "0.1.0"
description = "Drivers for iFCH devices"
authors = [{ name = "M. Francois", email = "francois.marelli@umons.ac.be" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[project.optional-dependencies]
esp_logger = ["pyserial", "pyserial-asyncio"]
movesense_gatt = ["bleak"]
formats = ["h5py", "numpy"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
asyncio_mode = "auto"
