[project]
name = "iFCH_ecg_viewer"
dynamic = ["version"]
description = "GUI for viewing ECG recordings"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.9.2", "numpy", "scipy", "ifch_drivers"]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }

[dependency-groups]
dev = ["pyinstaller"]
