[project]
name = "iFCH_ecg_viewer"
dynamic = ["version"]
description = "GUI for viewing ECG recordings"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.9.2",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "neurokit2>=0.2.13",
    "ifch_drivers",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }

[dependency-groups]
dev = ["pyinstaller>=6.19.0", "ruff>=0.15.12", "pre-commit>=4.6.0"]

[tool.hatch.version]
path = "main.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
