[project]
name = "iFCH_logger_gui"
version = "0.1"
description = "GUI for iFCH Logger"
requires-python = ">=3.12"
dependencies = [
    "qasync",
    "PySide6>=6.9.2",
    "numpy",
    "ifch_drivers[esp_logger, formats]",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }
