[project]
name = "iFCH_logger_gui"
dynamic = ["version"]
description = "GUI for iFCH Logger"
requires-python = ">=3.12"
dependencies = [
    "qasync",
    "PySide6>=6.9.2",
    "numpy",
    "ifch_drivers[esp_logger, formats]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "main.py"

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }
