[project]
name = "iFCH_esp_logger"
dynamic = ["version"]
description = "GUI for iFCH Logger"
requires-python = ">=3.12"
dependencies = [
    "qasync",
    "PySide6>=6.9.2",
    "numpy",
    "ifch_drivers[esp_logger, formats]",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }
