[project]
name = "iFCH_movesense_logger"
dynamic = ["version"]
description = "GUI for iFCH Movesense Logger"
requires-python = ">=3.12"
dependencies = [
    "qasync",
    "PySide6>=6.9.2",
    "numpy",
    "pyedflib",
    "ifch_drivers[movesense_gatt]",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }

[dependency-groups]
dev = ["pyinstaller"]
