[project]
name = "iFCH_multi_movesense"
dynamic = ["version"]
description = "GUI for iFCH multi-Movesense recorder"
requires-python = ">=3.12"
dependencies = [
    "qasync",
    "PySide6>=6.9.2",
    "numpy",
    "ifch_drivers[movesense_gatt]",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }

[dependency-groups]
dev = ["pyinstaller"]
