[project]
name = "iFCH_multi_movesense"
dynamic = ["version"]
description = "GUI for iFCH multi-Movesense recorder"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
dependencies = [
    "qasync>=0.28.0",
    "PySide6>=6.9.2",
    "numpy>=2.4.2",
    "wakepy>=1.0.0",
    "ifch_drivers[movesense_gatt]",
]

[tool.uv.sources]
ifch_drivers = { path = "../../drivers/", editable = true }

[dependency-groups]
dev = ["pyinstaller>=6.19.0", "ruff>=0.15.12", "pre-commit>=4.6.0"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
